Revision history for Test-BrewBuild

2.16 UNREL
        - remove the named loop in Dispatch::_fork() (closes #188)

2.15    2017-04-12
        - fixed issue in Git::revision() where we weren't actually checking the
          remote commit SHA1 sum correctly
        - all log objects reflect the module short name, not the full module
          path (closes #176)
        - moved all auto repo checking and comparisons to Tester
        - repo param must be sent in to bbdispatch when running in auto mode
          (fixes #176)
        - added -a|--auto flag to tester. This must be set when running dispatch
          in auto mode (closes #177)
        - clean up erroneous and incorrect error in logs about brewbuild args in
          auto mode if nothing is returned from the tester
        - fix issue with auto, if 0 is specified it wasn't acting like unlimited
          but stopping after first run
        - fix issue where --auto param wasn't being used when Tester was running
          in the background (ie. bbtester start)
        - remove Contributing and support sections in POD, updated copyright
          year (closes #175)
        - added --rpi flag to bbdispatch, used with --auto to enable LCD output
          when running RPi::WiringPi unit tests on a Raspberry Pi (this is a
          specific purpose feature only for my own testing). In order to work,
          bbtester needs to run in auto mode as does dispatch, and the
          BB_RPI_LCD env var must be set to a comma delimited list of six pin
          numbers that connect the LCD to the GPIO
        - added _lcd() in Dispatch for the above addition
        - backed out the check in Git::clone() using head(), as it wasn't
          working correctly on the RPi
        - built in RPi::WiringPi auto tester implemented. Runs tests in auto
          mode, and displays results to LCD
        - fix bug in Git::revision(). The git command wasn't quoted, so on
          Windows, it broke at "C:\Program"